--- a/blog/templates/blog/artigos.html
+++ b/blog/templates/blog/artigos.html
@@ -5,83 +5,20 @@
    <div class="grid-text">
       <h1>Artigos/livros publicados:</h1>
    </div>
-  
-      <div class="grid-container">
-         {% for artigo in page_obj  %}
-         <div class="grid-item-container">
-            <div class="title">{{artigo.titulo}}</div>
+   <div class="grid-container">
+      {% for artigo in page_obj  %}
+      <div class="grid-item-container center-text">
+         <div class="title center-text">{{artigo.titulo}}</div>
          <div class="grid-item">
-        
-            <a href="#">
-               <img class="grid-img" src="{{artigo.image.url}}">
-               </a>
-           
+            <a href="{{artigo.link}}" target="_blank">
+            <img class="grid-img" src="{{artigo.image.url}}">
+            </a>
          </div>
-         <div class="description">{{artigo.descricao|safe}}</div>
+         <div class="description center-text">{{artigo.descricao|safe}}</div>
       </div>
-      <!-- separação -->
-      <div class="grid-item-container">
-         <div class="title">{{artigo.titulo}}</div>
-      <div class="grid-item">
-     
-         <a href="#">
-            <img class="grid-img" src="{{artigo.image.url}}">
-            </a>
-        
-      </div>
-      <div class="description">{{artigo.descricao|safe}}</div>
+      {% endfor %}
    </div>
-     <!-- separação -->
-     <div class="grid-item-container">
-      <div class="title">{{artigo.titulo}}</div>
-   <div class="grid-item">
-  
-      <a href="#">
-         <img class="grid-img" src="{{artigo.image.url}}">
-         </a>
-     
-   </div>
-   <div class="description">{{artigo.descricao|safe}}</div>
-</div>
-  <!-- separação -->
-  <div class="grid-item-container">
-   <div class="title">{{artigo.titulo}}</div>
-<div class="grid-item">
 
-   <a href="#">
-      <img class="grid-img" src="{{artigo.image.url}}">
-      </a>
-  
-</div>
-<div class="description">{{artigo.descricao|safe}}</div>
-</div>
-  <!-- separação -->
-  <div class="grid-item-container">
-   <div class="title">{{artigo.titulo}}</div>
-<div class="grid-item">
-
-   <a href="#">
-      <img class="grid-img" src="{{artigo.image.url}}">
-      </a>
-  
-</div>
-<div class="description">{{artigo.descricao|safe}}</div>
-</div>
-  <!-- separação -->
-      <div class="grid-item-container">
-         <div class="title">{{artigo.titulo}}</div>
-      <div class="grid-item">
-     
-         <a href="#">
-            <img class="grid-img" src="{{artigo.image.url}}">
-            </a>
-        
-      </div>
-      <div class="description">{{artigo.descricao|safe}}</div>
-   </div>
-   </div>
-         {% endfor %}
-       
    <!-- Start Pagination -->
    <!-- End Pagination -->
 </section>
@@ -97,7 +34,6 @@
    </ul>
 </div>
 {% endblock%}
-
 {% block 'js' %}
-   <script src="{% static 'base/js/artigos.js'%}"></script>
+<script src="{% static 'base/js/artigos.js'%}"></script>
 {% endblock  %}
