--- a/blog/templates/blog/sobremim.html
+++ b/blog/templates/blog/sobremim.html
@@ -7,6 +7,7 @@
 
 {% block  'conteudo' %}
 <section class="sobremim">
+   {% for sobre_mim in sobre_mim %}
    <div class="sobremim-main-container">
       <h1>{{sobre_mim.titulo}}</h1>
       <div class="sobremim-container">
@@ -15,11 +16,12 @@
          </div>
          <div class="sobremim-text">
             <p>
-               {{sobre_mim.sobre_mim}}
+               {{sobre_mim.sobre_mim|safe}}
             </p>
          </div>
       </div>
    </div>
+   {% endfor %}
 </section>
 <div class="linha-container">
    <p class="trabalhos">Onde encontrar meus trabalhos:</p>
@@ -38,9 +40,9 @@
       </div>
       <div class="social-sobremim">
          <ul>
-            <a href=""><img src="{% static 'base/img/a(semfundoo).png'%}"></a>
-            <a href=""><img src="{% static 'base/img/linkedin.png'%}"></a>
-            <a href=""><img src="{% static 'base/img/medium(semfundo).png'%}"></a>
+            <a href="{{redes_sociais.Lattes}}" target="_blank"><img src="{% static 'base/img/a(semfundoo).png'%}"></a>
+            <a href="{{redes_sociais.Linkedin}}" target="_blank"><img src="{% static 'base/img/linkedin.png'%}"></a>
+            <a href="{{redes_sociais.medium}}" target="_blank"><img src="{% static 'base/img/medium(semfundo).png'%}"></a>
          </ul>
       </div>
    </div>
