--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,9 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+
+ 
+
    <head>
       {% block 'css' %}{% endblock  %}
       <link rel="stylesheet" href="{% static 'base/css/header.css' %}">
@@ -13,6 +16,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
    </head>
    <body>
+      <div id="preloader"> </div>
       <header>
          <nav class="nav">
             <button class="hamburger">
@@ -59,6 +63,8 @@
             </label>
          </div>
       </nav>
+
+     
     {% block  'conteudo' %}{% endblock  %}
 
     <footer>
@@ -134,6 +140,16 @@
         </div>
      </div>
      {% block 'js' %}{% endblock  %}
+     <script> 
+      var loader = document.getElementById("preloader");
+
+window.addEventListener('load', function() {
+ 
+    loader.style.display = 'none';
+  
+});
+     </script>
+
      
      <script src="https://kit.fontawesome.com/9331f17a29.js" crossorigin="anonymous"></script>
   </body>
