--- a/templates/static/base/css/posts.css
+++ b/templates/static/base/css/posts.css
@@ -46,7 +46,7 @@ justify-content: center;
 .post-subtitulo
 {
   font-size: .9rem;
-  font-family: 'myFont';
+  font-family:'AmericanTypeWriterLight' !important;
                                                 
 }
 .post-subtitulo-night
@@ -65,7 +65,7 @@ justify-content: center;
  .post-box
 {
     width: 85%;
-    height:11.5rem;
+    height:13.5rem;
     border: solid #fff 2px;
     padding:0.5rem;
     display: inline-block;
@@ -76,7 +76,7 @@ justify-content: center;
 }
 .post-text
 {
-  height:5rem;
+  height:7rem;
   overflow:hidden;
   padding:.7rem;
  
@@ -122,7 +122,7 @@ justify-content: center;
 .post .comentario-box.is-active
 {
   
-  bottom:-3rem;
+  bottom:-7rem;
   right:6px;
   
   
@@ -254,7 +254,8 @@ justify-content: center;
   display: flex;
   height: 100%;
   justify-content: left;
-  max-height:18rem;
+  width:21rem;
+  position:relative;
   
 }
 
@@ -265,7 +266,6 @@ justify-content: center;
     border: solid #fff 2px;
     height: 100%;
     width:100%;
-    max-height:18rem;
     box-shadow: 5px 5px #000;
 }
 
@@ -334,6 +334,7 @@ font-family:""
   cursor: pointer;
   max-height: 4rem;
   background-color:#2a2a2d;
+     
   
   
 }
@@ -385,11 +386,7 @@ font-family:""
 {
   
 }
-.body-night .comentario-box
-{
-  border: solid #000 2px;
-  box-shadow: 5px 5px #3c3c3c;
-}
+
 .body-night .comentario-box.is-active
 {
   background-color: #a7a7a7;
@@ -401,18 +398,22 @@ font-family:""
 
 
 }
-.comentario-box.is-active
-{
-  position:absolute;
-  width:24.5rem;
-  height:20rem;
-  max-height: 30rem !important;
-  background-color: #2a2a2d;
-  overflow-y: scroll;
-  z-index:2;
- 
+  .comentario-box.is-active
+  {
+    position:absolute;
+    width:24.5rem;
+    height:20rem;
+    max-height: 30rem !important;
+    background-color: #2a2a2d;
+    overflow-y: scroll;
+    z-index:2;  
   
-}
+    
+  }
+  .comentario-box.is-active .comentario-box-fechar
+  {
+    display:block !important;
+  }
 .post2-comentarios .comentario-box.is-active
 {
   left:-2.3rem;
@@ -467,7 +468,7 @@ margin-bottom: 3rem;
  align-items: center;
  box-shadow: 5px 5px #000;
  max-height: 4rem;
- margin-left:8rem;
+ margin-left:4rem;
 
 }
 .body-night .main-comentario
@@ -510,7 +511,7 @@ margin-bottom: 3rem;
 {
   min-height:80% !important;
   border-radius: .5rem !important;
-  padding:0 !important;
+  padding:0.5rem;
 
   
   
@@ -519,8 +520,12 @@ margin-bottom: 3rem;
 .main-comentario.is-active
 {
   height: 12rem !important;
-  max-height: 12rem !important;
-  align-items:flex-end;
+    max-height: 12rem !important;
+    align-items: flex-end;
+    position: absolute;
+    top: -2rem;
+    z-index: 9;
+    background-color: #2a2a2d;
   
 }
 .comentario-data
@@ -593,15 +598,15 @@ margin-bottom: 3rem;
   
 }
 .input-comentario-submit {
-  background-image: url(/static/base/img/userlmn_81e23760d256f23eac8229385f4a96df.png);
+  background-image: url("/static/base/img/enviar(claro).png");
   height: 2rem;
-  width: 2rem;
+  width: 2.4rem;
   background-size: cover;
   background-repeat: no-repeat;
   border: none;
   background-color: transparent;
   outline: none;
-  margin-left:1rem;
+  margin-left:.5rem;
   cursor:pointer;
 }
 .comentario-form
@@ -747,4 +752,74 @@ button.fechar-modal-ler-respostas
 .body-night p, h1, h2, h3
 {
   font-weight:600;
+}
+.body-night .post2 .comentario-box, .body-night .post2 .add-comentario-box
+{
+  background-color:#a4a4a4;
+  border: solid #000 2px;
+  box-shadow:3px 3px #3a3a3d;
+  
+}
+.body-night .post .comentario-box, .body-night .post .add-comentario-box
+{
+  background-color:#e9e9e9;
+  border:#000 solid 2px;
+  box-shadow:3px 3px #3a3a3d;
+}
+.body-night .post-box-p a
+{
+  font-weight:500;
+}
+.body-night h3
+{
+  color:#000;
+
+}
+.post2-ler-mais.is-active
+{
+  display:flex !important;
+}
+.post1-ler-mais.is-active
+{
+  display:flex !important;
+}
+.ndfHFb-c4YZDc-kODWGd-nK2kYb
+{
+  background-color:#fff;
+}
+.abrir-post-video
+
+{
+  position:relative;
+  cursor:pointer;
+  
+}
+
+
+.abrir-post-video::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Isto adiciona uma sobreposição preta semitransparente. Ajuste a opacidade (0.5 neste caso) para atender às suas necessidades */
+  z-index: 1;
+ 
+}
+
+.modal-video
+{
+  width:85%;
+  height:85%;
+}
+.play-btn 
+{
+  position:absolute;
+  width:5rem;
+  left:50%;
+  top:50%;
+  height:5rem;
+  z-index:1;
+  transform: translate(-50%, -50%);
 }
